// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders correctly 1`] = `
<div>
  <i
    class="icon"
  >
    <test-file-stub
      name="times"
    />
  </i>
</div>
`;

exports[`Icon renders correctly 2`] = `
<div>
  <i
    class="icon"
  >
    <test-file-stub
      name="arrow"
    />
  </i>
</div>
`;
